--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -25,4 +26,12 @@ body {
 
 .s-box-shadow {
   box-shadow: 0px 1px 3px 0px #00000040;
+}
+
+.blue-box-shadow {
+  transition: all 0.3s;
+  &:hover {
+    transition: all 0.3s;
+    box-shadow: 0px 0px 8px 0px #0094cd;
+  }
 }
