--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,22 @@
   }
 }
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 20px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    @apply bg-[#D9D9D9];
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply border-skyblue bg-skyblue rounded-[10px];
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
